seed/compiler/src/generated/grammar/HopperParser.js
// Generated from grammar/Hopper.g4 by ANTLR 4.13.1
// jshint ignore: start
import antlr4 from 'antlr4';
import HopperListener from './HopperListener.js';
import HopperVisitor from './HopperVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class HopperParser extends antlr4.Parser {

    static grammarFileName = "Hopper.g4";
    static literalNames = [ null, "'import'", "','", "'from'", "'bind'", 
                            "'='", "'::'", "'address'", "'strict'", "'entry'", 
                            "'('", "')'", "'enum'", "'{'", "'}'", "'-'", 
                            "'alias'", "'extern'", "'function'", "'requires'", 
                            "'ensures'", "'struct'", "'pad'", "'bitfield'", 
                            "'['", "']'", "'template'", "'<'", "'>'", "'String'", 
                            "'int'", "'byte'", "'char'", "'float'", "'bool'", 
                            "'string'", "'unsigned'", "'interface'", "'class'", 
                            "'implements'", "'operator'", "'constructor'", 
                            "'destructor'", "'value'", "'size'", "'+'", 
                            "'*'", "'/'", "'%'", "'=='", "'!='", "'<='", 
                            "'>='", "'&'", "'|'", "'^'", "'<<'", "'>>'", 
                            "'...'", "'void'", "'bit'", "'callback'", "'const'", 
                            "'allocate'", "'.'", "'if'", "'while'", "'for'", 
                            "';'", "'break'", "'continue'", "'return'", 
                            "'defer'", "'deallocate'", "'constrain'", "'invariant'", 
                            "'else'", "'||'", "'&&'", "'!'", "'~'", "'true'", 
                            "'false'", "'null'" ];
    static symbolicNames = [ null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, null, null, null, null, 
                             null, null, null, null, "IntegerLiteral", "HexLiteral", 
                             "CharLiteral", "UnicodeLiteral", "FloatLiteral", 
                             "StringLiteral", "Identifier", "NEWLINE", "LINE_COMMENT", 
                             "WS", "AsmBlock" ];
    static ruleNames = [ "program", "topLevelDecl", "importDecl", "bindDecl", 
                         "strictDecl", "entryDecl", "enumDecl", "enumVariant", 
                         "aliasDecl", "functionDecl", "contractClause", 
                         "structDecl", "structMember", "bitfieldDecl", "bitfieldMember", 
                         "templateDecl", "templateName", "templateParam", 
                         "interfaceDecl", "interfaceMember", "classDecl", 
                         "className", "implementsList", "classMember", "fieldName", 
                         "operatorSymbol", "paramList", "externParamList", 
                         "param", "paramName", "type", "block", "statement", 
                         "constrainClause", "invariantClause", "elseClause", 
                         "forInit", "forUpdate", "expression", "logicalOr", 
                         "logicalAnd", "bitwiseOr", "bitwiseXor", "bitwiseAnd", 
                         "equality", "relational", "shift", "additive", 
                         "multiplicative", "unary", "castType", "primary", 
                         "argList", "literal" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = HopperParser.ruleNames;
        this.literalNames = HopperParser.literalNames;
        this.symbolicNames = HopperParser.symbolicNames;
    }



	program() {
	    let localctx = new ProgramContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, HopperParser.RULE_program);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 111;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===91) {
	            this.state = 108;
	            this.match(HopperParser.NEWLINE);
	            this.state = 113;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 123;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) === 0 && ((1 << _la) & 78058258) !== 0) || _la===37 || _la===38) {
	            this.state = 114;
	            this.topLevelDecl();
	            this.state = 118;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===91) {
	                this.state = 115;
	                this.match(HopperParser.NEWLINE);
	                this.state = 120;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 125;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 126;
	        this.match(HopperParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	topLevelDecl() {
	    let localctx = new TopLevelDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, HopperParser.RULE_topLevelDecl);
	    try {
	        this.state = 140;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 17:
	        case 18:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 128;
	            this.functionDecl();
	            break;
	        case 21:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 129;
	            this.structDecl();
	            break;
	        case 38:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 130;
	            this.classDecl();
	            break;
	        case 26:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 131;
	            this.templateDecl();
	            break;
	        case 12:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 132;
	            this.enumDecl();
	            break;
	        case 1:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 133;
	            this.importDecl();
	            break;
	        case 16:
	            this.enterOuterAlt(localctx, 7);
	            this.state = 134;
	            this.aliasDecl();
	            break;
	        case 9:
	            this.enterOuterAlt(localctx, 8);
	            this.state = 135;
	            this.entryDecl();
	            break;
	        case 4:
	            this.enterOuterAlt(localctx, 9);
	            this.state = 136;
	            this.bindDecl();
	            break;
	        case 8:
	            this.enterOuterAlt(localctx, 10);
	            this.state = 137;
	            this.strictDecl();
	            break;
	        case 23:
	            this.enterOuterAlt(localctx, 11);
	            this.state = 138;
	            this.bitfieldDecl();
	            break;
	        case 37:
	            this.enterOuterAlt(localctx, 12);
	            this.state = 139;
	            this.interfaceDecl();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	importDecl() {
	    let localctx = new ImportDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, HopperParser.RULE_importDecl);
	    var _la = 0;
	    try {
	        this.state = 155;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new ImportFromContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 142;
	            this.match(HopperParser.T__0);
	            this.state = 143;
	            this.match(HopperParser.Identifier);
	            this.state = 148;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===2) {
	                this.state = 144;
	                this.match(HopperParser.T__1);
	                this.state = 145;
	                this.match(HopperParser.Identifier);
	                this.state = 150;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 151;
	            this.match(HopperParser.T__2);
	            this.state = 152;
	            this.match(HopperParser.Identifier);
	            break;

	        case 2:
	            localctx = new ImportModuleContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 153;
	            this.match(HopperParser.T__0);
	            this.state = 154;
	            this.match(HopperParser.Identifier);
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	bindDecl() {
	    let localctx = new BindDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, HopperParser.RULE_bindDecl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 157;
	        this.match(HopperParser.T__3);
	        this.state = 158;
	        this.match(HopperParser.HexLiteral);
	        this.state = 159;
	        this.match(HopperParser.T__4);
	        this.state = 160;
	        this.match(HopperParser.Identifier);
	        this.state = 161;
	        this.match(HopperParser.T__5);
	        this.state = 162;
	        this.match(HopperParser.T__6);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	strictDecl() {
	    let localctx = new StrictDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, HopperParser.RULE_strictDecl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 164;
	        this.match(HopperParser.T__7);
	        this.state = 165;
	        this.type();
	        this.state = 166;
	        this.match(HopperParser.Identifier);
	        this.state = 167;
	        this.match(HopperParser.T__4);
	        this.state = 168;
	        this.match(HopperParser.HexLiteral);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	entryDecl() {
	    let localctx = new EntryDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, HopperParser.RULE_entryDecl);
	    try {
	        this.state = 184;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,6,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new EntryBlockParamsContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 170;
	            this.match(HopperParser.T__8);
	            this.state = 171;
	            this.match(HopperParser.Identifier);
	            this.state = 172;
	            this.match(HopperParser.T__9);
	            this.state = 173;
	            this.paramList();
	            this.state = 174;
	            this.match(HopperParser.T__10);
	            this.state = 175;
	            this.block();
	            break;

	        case 2:
	            localctx = new EntryBlockContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 177;
	            this.match(HopperParser.T__8);
	            this.state = 178;
	            this.match(HopperParser.Identifier);
	            this.state = 179;
	            this.block();
	            break;

	        case 3:
	            localctx = new EntryAddrContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 180;
	            this.match(HopperParser.T__8);
	            this.state = 181;
	            this.match(HopperParser.Identifier);
	            this.state = 182;
	            this.match(HopperParser.T__4);
	            this.state = 183;
	            this.expression();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	enumDecl() {
	    let localctx = new EnumDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, HopperParser.RULE_enumDecl);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 186;
	        this.match(HopperParser.T__11);
	        this.state = 187;
	        this.match(HopperParser.Identifier);
	        this.state = 188;
	        this.match(HopperParser.T__12);
	        this.state = 192;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===91) {
	            this.state = 189;
	            this.match(HopperParser.NEWLINE);
	            this.state = 194;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 213;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===90) {
	            this.state = 195;
	            this.enumVariant();
	            this.state = 204;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,9,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 197; 
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                    do {
	                        this.state = 196;
	                        this.match(HopperParser.NEWLINE);
	                        this.state = 199; 
	                        this._errHandler.sync(this);
	                        _la = this._input.LA(1);
	                    } while(_la===91);
	                    this.state = 201;
	                    this.enumVariant(); 
	                }
	                this.state = 206;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,9,this._ctx);
	            }

	            this.state = 210;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while(_la===91) {
	                this.state = 207;
	                this.match(HopperParser.NEWLINE);
	                this.state = 212;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	        }

	        this.state = 215;
	        this.match(HopperParser.T__13);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	enumVariant() {
	    let localctx = new EnumVariantContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, HopperParser.RULE_enumVariant);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 217;
	        this.match(HopperParser.Identifier);
	        this.state = 226;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===5) {
	            this.state = 218;
	            this.match(HopperParser.T__4);
	            this.state = 224;
	            this._errHandler.sync(this);
	            switch(this._input.LA(1)) {
	            case 15:
	            case 84:
	            case 85:
	                this.state = 220;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	                if(_la===15) {
	                    this.state = 219;
	                    this.match(HopperParser.T__14);
	                }

	                this.state = 222;
	                _la = this._input.LA(1);
	                if(!(_la===84 || _la===85)) {
	                this._errHandler.recoverInline(this);
	                }
	                else {
	                	this._errHandler.reportMatch(this);
	                    this.consume();
	                }
	                break;
	            case 89:
	                this.state = 223;
	                this.match(HopperParser.StringLiteral);
	                break;
	            default:
	                throw new antlr4.error.NoViableAltException(this);
	            }
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	aliasDecl() {
	    let localctx = new AliasDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, HopperParser.RULE_aliasDecl);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 228;
	        this.match(HopperParser.T__15);
	        this.state = 229;
	        this.match(HopperParser.Identifier);
	        this.state = 230;
	        this.match(HopperParser.T__4);
	        this.state = 231;
	        this.type();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	functionDecl() {
	    let localctx = new FunctionDeclContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, HopperParser.RULE_functionDecl);
	    var _la = 0;
	    try {
	        this.state = 290;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,23,this._ctx);
	        switch(la_) {
	        case 1:
	            localctx = new ExternFuncDeclContext(this, localctx);
	            this.enterOuterAlt(localctx, 1);
	            this.state = 233;
	            this.match(HopperParser.T__16);
	            this.state = 234;
	            this.match(HopperParser.T__17);
	            this.state = 235;
	            this.match(HopperParser.Identifier);
	            this.state = 236;
	            this.match(HopperParser.T__9);
	            this.state = 238;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if((((_la) & ~0x1f) === 0 && ((1 << _la) & 3758096512) !== 0) || ((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 1006632991) !== 0) || _la===90) {
	                this.state = 237;
	                this.externParamList();
	            }

	            this.state = 240;
	            this.match(HopperParser.T__10);
	            this.state = 241;
	            this.type();
	            break;

	        case 2:
	            localctx = new ExternProcDeclContext(this, localctx);
	            this.enterOuterAlt(localctx, 2);
	            this.state = 242;
	            this.match(HopperParser.T__16);
	            this.state = 243;
	            this.match(HopperParser.T__17);
	            this.state = 244;
	            this.match(HopperParser.Identifier);
	            this.state = 245;
	            this.match(HopperParser.T__9);
	            this.state = 247;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if((((_la) & ~0x1f) === 0 && ((1 << _la) & 3758096512) !== 0) || ((((_la - 32)) & ~0x1f) === 0 && ((1 << (_la - 32)) & 1006632991) !== 0) || _la===90) {
	                this.state = 246;
	                this.externParamList();
	            }

	            this.state = 249;
	            this.match(HopperParser.T__10);
	            break;

	        case 3:
	            localctx = new FuncDeclContext(this, localctx);
	            this.enterOuterAlt(localctx, 3);
	            this.state = 250;
	            this.match(HopperParser.T__17);
	            this.state = 251;
	            this.match(HopperParser.Identifier);
	            this.state = 252;
	            this.match(HopperParser.T__9);
	            this.state = 254;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if(((((_la - 7)) & ~0x1f) === 0 && ((1 << (_la - 7)) & 1069547521) !== 0) || ((((_la - 59)) & ~0x1f) === 0 && ((1 << (_la - 59)) & 2147483655) !== 0)) {
	                this.state = 253;
	                this.paramList();
	            }

	            this.state = 256;
	            this.match(HopperParser.T__10);
	            this.state = 257;
	            this.type();
	            this.state = 266;
	            this._errHandler.sync(this);
	            var _alt = this._interp.adaptivePredict(this._input,19,this._ctx)
	            while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	                if(_alt===1) {
	                    this.state = 259; 
	                    this._errHandler.sync(this);
	                    _la = this._input.LA(1);
	                    do {
	                        this.state = 258;
	                        this.match(HopperParser.NEWLINE);
	                        this.state = 261; 
	                        this._errHandler.sync(this);
	                        _la = this._input.LA(1);
	                    } while(_la===91);
	                    this.state = 263;
	                    this.contractClause(); 
	                }
	                this.state = 268;
	                this._errHandler.sync(this);
	                _alt = this._interp.adaptivePredict(this._input,19,this._ctx);
	            }
